--- a/index.html
+++ b/index.html
@@ -4,10 +4,29 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>HTML + CSS</title>
+    <title>Studio Ghibli Recipes</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>This is a simple HTML + CSS template!</h1>
+<div class="title">
+  <h1 class="title-recipe"> Studio Ghibli Recipes </h1> 
+</div>
+<img src="https://img.freepik.com/free-photo/cute-cartoon-style-food-arrangement_23-2150209290.jpg?w=740&t=st=1704405669~exp=1704406269~hmac=d736b847a7e1b7d29acb2771f6c430e074016ec2c6854cfb28c5797f37eb65c1" class="sushi-picture"> 
+<div class="about">
+  <p>Studio Ghibli has been on my top favorite movies list as long as I can remember. One of the
+    main reason is not because of the breathtaking art, amazing characters, heartful storyline, or how Miyazaki Hayao touched my heart with
+    the life lesson - it's because of the food! All of Studio Ghibli food has my mouth watering as it is drawn 
+    to perfection. Here are my three favorite recipes from Studio Ghibli and easy to make! Try it out! 
+  </p> 
+</div>
+<div class="recipes">
+ <a href="riceball.html"><h2 class="rice">Onigiri (Spirited Away)</h2></a> 
+ <a href="bentobox.html"> <h2 class="bento-box">Bento Boxes (My Neighbor Totoro)</h2> </a> 
+ <a href="baconeggs.html"> <h2 class="bacon-eggs">Bacon and Eggs (Howl’s Moving Castle)</h2> </a> 
+</div> 
+<br>
+<br>
+<br>
+<footer>Coded By Kokibo Code</footer>
   </body>
 </html>
